homeWork/02/yaml/00-default-deny-all.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny-policy
  namespace: app
  labels:
    author: nvk-r0dney
spec:
  podSelector: {}
  policyTypes:
    - Ingress
