homeWork/02/yaml/02-backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-deployment
  namespace: app
  labels:
    app: backend
    author: nvk-r0dney
spec:
  replicas: 3
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
        - name: backend
          image: wbitt/network-multitool
          resources:
            limits:
              memory: "128Mi"
              cpu: "500m"
          ports:
            - name: back-http
              containerPort: 80
              protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: back-svc
  namespace: app
  labels:
    author: nvk-r0dney
spec:
  selector:
    app: backend
  ports:
    - port: 80
      targetPort: back-http
      name: bsvc-port
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: backend-policy
  namespace: app
  labels:
    author: nvk-r0dney
spec:
  podSelector:
    matchLabels:
      app: backend
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: frontend
  policyTypes:
    - Ingress
